# Lab_sipm

./: .gitignore  Ana_Traces_Agilent.py  DLED.cxx  OperationPoint.C  README.md  ana_traces.py  ana_traces_lecroy.py  display_traces_1ch.C  sipm_spectrum.cfg  sipm_spectrum.cxx  wavedump-howto.txt
DATA_ACQUISITION/: Read_Agilent.py  drs_reader.cpp
DATA_ANALYSIS/: 20180811_DCR_CrossTalk_FBK_HD3_2_DARK_LASER_data_2018_07_V_V_Rg.tex  Ana_Traces_Agilent.C  Ana_Traces_Agilent.py  Ana_Traces_PicoScope.py  Ana_Traces_SiPM.C  Ana_Traces_SiPM.cxx  Ana_Traces_SiPM_ReadMe.md  Ana_Traces_SiPM_cxx_ACLiC_dict.cxx_tmp_9557  Ana_Traces_SiPM_old.cxx  Ana_Traces_SiPM_ver01.cxx  FindDCRCT.py  FindGAIN.py  I-V_Analysis.py  PlotIV.py  PlotXY.py  Plot_value.py  ReadFileFindPeaks.cxx  ReadFileFindPeaks.py  tekwfm.py
DATA_ANALYSIS_02/: .PlotIV.py.kate-swp  FindDCR.py  FindDCRCT.py  FindDCRCTDelays.py  FindDCRCT_Test.py  FindGAIN.py  I-V_Analysis.py  PlotSettings.py  Plots01.py  ReadFileFindPeaks.cxx  ReadFileFindPeaks.py
DATA_ANALYSIS_OLD/: Ana_Traces_SiPM.cxx  Ana_Traces_SiPM_ReadMe.md  Ana_Traces_SiPM_ver01.cxx  TEST_FILE_Ana_Traces_Agilent_3_events.txt
DCR_and_CrossTalk/: DCR_CrossTalk.C
GAIN-V/: Ana_Traces_Agilent.py  Ana_Traces_Agilent_WIN.py  Ana_Traces_PicoScope.py  GAIN-V_SiPM.py  ana_traces_lecroy.py
I-V/: I-V_Analysis.py  I-V_DIR_Analysis.py  PlotSettings.py
LTSpice_CustomComponents/: ADA4927.asy  BFT92W.asy  LM358.asy  MAX912.FAM  (+5 more)
sipm_dev/: AnaSipm.cxx  AnaSipm.h  AnaSipmLinkDef.h  CMakeLists.txt  Sipm.cxx  Sipm.h  SipmLinkDef.h  characterize_sipm.cxx  decode_file.cxx  main.cxx
(+86 files in other folders)
